# web3-world

./: .$Dvoting.drawio.bkp  .gitignore  Dvoting.drawio  README.md  VotingManagerSmartContract.drawio  hardhat.config.js  logika_smartcontract.txt  package-lock.json  package.json  rundev.sh
backend/: .env  Cargo.toml
backend/database/: user.db  worldweb3.db
backend/migrations/: 20250327143040_create_users_table.sql  20250624041239_create_off_chain_voting_table.sql
backend/src/: main.rs
backend/src/handlers/: ipfs_data_handler.rs  log_in_handler.rs  mod.rs  off_chain_voting_data.rs
backend/src/models/: mod.rs  user_dto.rs  user_ipfs_dto.rs
backend/src/services/: ipfs_services.rs  mod.rs
cbackend/: .env  Cargo.toml  goals8mar.txt  practice2.txt
cbackend/database/: user.db
cbackend/migrations/: 20250327143040_create_users_table.sql
cbackend/src/: dynamicRouter.txt  howtousejson.txt  init_database.rs  main.rs  registry.rs  router.rs  saranrouter.txt  signup.rs  tutorial_pakai_db.txt
contracts/: AccessControl.sol  Rocket.txt  VotingManager.txt
frontend/: .env.example  package-lock.json  package.json  tsconfig.json
frontend/src/: votingpagedoc-v1.2.md  votingpagedoc.md
ignition/modules/: 01_deployer_votingmanager.js  Rocket.js
publix/: index.html  script.js  styles.css
test/: AccessControl.js
votingdapp/: .gitignore  info.txt  jsconfig.json  package-lock.json  package.json  tsconfig.json
web3/: README.md  coming_soon.txt  hardhat.config.js  package-lock.json  package.json
web3/contracts/: AccessControl.sol
web3/test/: AccessControl.js
(+85 files in other folders)
