[package]
name = "cbackend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
ethers = "2.0.14"
tokio = "1.43.0"
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.7.0"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
sqlx = { version = "=0.8.3", features = ["sqlite"] }
rusqlite = "=0.32.1"

